--- a/app/src/main/res/layout/app_bar_game.xml
+++ b/app/src/main/res/layout/app_bar_game.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="io.oversimplified.android.photoit.GameActivity">
+    tools:context=".PhotoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_game" />
+    <include layout="@layout/content_main_photo" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
