--- a/app/src/main/res/layout/recycler_view_card_item.xml
+++ b/app/src/main/res/layout/recycler_view_card_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="338dp">
 
             <ImageView
-                android:id="@+id/img_game"
+                android:id="@+id/img_photo"
                 android:layout_width="fill_parent"
                 android:layout_height="250dp"
                 android:scaleType="fitXY"
@@ -29,7 +29,7 @@
                 android:id="@+id/img_divider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@+id/img_game"
+                android:layout_below="@+id/img_photo"
                 android:background="@color/colorPrimaryDark" />
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -55,7 +55,7 @@
 
                 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:layout_width="150dp"
+                    android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
@@ -67,14 +67,14 @@
                         android:id="@+id/tv_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Name Last."
+                        android:text="Name"
                         android:textColor="@color/colorPrimary" />
 
                     <TextView
-                        android:id="@+id/tv_level"
+                        android:id="@+id/tv_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="lvl XX"
+                        android:text="Date"
                         android:textColor="@color/colorPrimary" />
                 </LinearLayout>
 
@@ -86,21 +86,63 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:background="@color/colorPrimary"
-
                     android:gravity="center"
                     android:orientation="horizontal">
 
-                    <ImageView
+                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="wrap_content"
+                        android:id="@+id/view_like"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/ic_menu_camera_white" />
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorPrimary"
+                        android:gravity="center"
+                        android:orientation="vertical">
 
-                    <ImageView
+                        <ImageView
+                            android:id="@+id/img_like"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+
+                            android:src="@drawable/ic_thumb_up_black_24dp" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+
+                            android:text="Like" />
+                    </LinearLayout>
+
+                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp"
-                        android:src="@drawable/ic_menu_slideshow" />
+                        android:id="@+id/view_dislike"
+
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_margin="5dp"
+                        android:background="@color/colorPrimary"
+
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/img_dislike"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_thumb_down_black_24dp" />
+
+                        <TextView
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="DisLike" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
